--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 	#container {
 		/* MAIN CONTAINER */
-		background: #F9F9F9;
+		background: no-repeat url("background/background_02.png") center -20%;
 		width: 100%;
 		height: 100%;
 		margin: auto;
@@ -45,13 +45,13 @@
 	}
 
 	#banner #time_box {
-		color: #7E7E7E;
+		color: rgb(80, 78, 78);
 		right: 20px;
 		text-align: right;
 	}
 
 	#banner #day_box {
-		color: #00B5B5;
+		color: rgb(80, 78, 78);
 		left: 20px;
 		text-align: left;
 	}
@@ -68,9 +68,12 @@
 		width: auto !important;
 		position: absolute;
 		bottom: 20px;
+		opacity: 0.85;
 	}
 
 	#searchbox {
+		background-color: #F6F7FB;
+		opacity: 0.95;
 		border: none;
 		box-shadow: 0px 1px 2px rgba(0, 0, 0, .1) !important;
 		color: #60646D;
@@ -116,6 +119,7 @@
 		margin-right: 15px;
 		display: inline-block !important;
 		text-align: center;
+		opacity: 0.95;
 	}
 
 	.card .avatar {
