--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
 
 	#image-button {
 		background-color: transparent;
-		
+		background-image: url("icons/search_icon.png");
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: 18px auto;
