--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 	#banner #day_box {
 		background: #FFF;
 		box-shadow: 0px 1px 2px rgba(0, 0, 0, .1) !important;
-		border-radius: 2px !important;
+		border-radius: 25% !important;
 		font-family: "Roboto";
 		font-size: 14pt;
 		font-stretch: condensed;
@@ -111,7 +111,7 @@
 	.card {
 		background: #F6F7FB;
 		box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
-		border-radius: 2px;
+		border-radius: 5%;
 		width: 12vw;
 		height: auto;
 		padding-bottom: 1.2vw;
@@ -123,7 +123,7 @@
 	}
 
 	.card .avatar {
-		border-radius: 50%;
+		border-radius: 25%;
 		box-shadow: 0px 1px 2px rgba(0, 0, 0, .1);
 		height: 8.5vw;
 		width: 8.5vw;
